Use proximity scroll snapping on mobile to stop top overscroll jumping to the next section

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -21,7 +21,7 @@ html {
 
 @media (max-width: 860px) {
   html {
-    scroll-snap-type: y mandatory;
+    scroll-snap-type: y proximity;
   }
 }
 
